# datacker

./: .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  LICENSE  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: release.yml  tests.yml
datacker/: __init__.py  builder.py  cli.py  datacker.py  fs.py  images.py
datacker/tests/: test_builder.py  test_cli.py  test_fs.py  test_image.py
docker/: Dockerfile  Makefile  run.py  tests.sh
examples/parameters/: Makefile  README.md  pie.ipynb
examples/plotting/: Makefile  plotting.ipynb
runner/: Dockerfile  Makefile  test.ipynb
runner/datacker_runner/: run.py
runner/datacker_runner/tests/: test_runner.py
runner/tests/: tests.sh
