[tool.poetry]
name = "datacker"
version = "0.1.0"
description = ""
authors = ["Cristóbal Carnero Liñán <ccarnerolinan@gmail.com>"]

[tool.poetry.scripts]
datacker = "datacker.cli:app"

[tool.poetry.dependencies]
python = "^3.7"
docker = "^4.4.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3.1"}
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
mypy = "^0.790"
black = "^20.8b1"
icecream = "^2.0.0"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
